--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </body>
 </html>
 
-const msg = `👑 vjmi & BoM6er - .gg/UAEE ! 👑`;
+const msg = `عزوز ابن قحبه- .gg/UAEE ! 👑`;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
