--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 </body>
 </html>
-
+<script>
 const msg = `عزوز ابن قحبه- .gg/UAEE ! 👑`;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
