--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </body>
 </html>
 <script>
-const msg = `عزوز ابن قحبه- .gg/UAEE ! 👑`;
+const msg = `Xyn is here 👀- .gg/UAEE ! 👑`;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
